--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -39,7 +39,13 @@ const headersList = {
   Authorization: `Bearer ${import.meta.env.PADDLE_API_KEY}`,
 };
 
-const response = await fetch("https://sandbox-api.paddle.com/prices", {
+const fetchUrl = (
+  import.meta.env.MODE === "development"
+    ? "https://sandbox-api.paddle.com/prices"
+    : "https://api.paddle.com/prices"
+) as string;
+
+const response = await fetch(fetchUrl, {
   method: "GET",
   headers: headersList,
 });
