--- a/src/pages/hu/gocardless.astro
+++ b/src/pages/hu/gocardless.astro
@@ -45,6 +45,8 @@ const fetchUrl = (
     : "https://api.paddle.com/prices"
 ) as string;
 
+console.log("===> ~ fetchUrl:", fetchUrl);
+
 const response = await fetch(fetchUrl, {
   method: "GET",
   headers: headersList,
