ui: fix hu gocardless

--- a/src/pages/gocardless.astro
+++ b/src/pages/gocardless.astro
@@ -181,7 +181,7 @@ const pricingData = [
           <h2 class="font-bold text-3xl mb-10">
             Less manual, boring tasks with automation
           </h2>
-          <p class="list-disc text-lg leading-7 space-y-5]">
+          <p class="list-disc text-lg leading-7 space-y-5">
             Thanks to the European open banking directive, banks are required to
             provide access to banking data according to industry standards, with
             the appropriate permissions. <br /><br />
