fix: dark mode erpnext-demo

--- a/src/pages/erpnext-demo.astro
+++ b/src/pages/erpnext-demo.astro
@@ -179,7 +179,7 @@ changeLanguage("en");
 
             <div
               id="mauticform_wrapper_demo"
-              class="mauticform_wrapper text-[#192734] darK:text-white"
+              class="mauticform_wrapper text-[#192734] dark:text-white"
             >
               <form
                 autocomplete="false"
