--- a/src/pages/hu/erpnext-demo.astro
+++ b/src/pages/hu/erpnext-demo.astro
@@ -182,7 +182,7 @@ changeLanguage("hu");
 
             <div
               id="mauticform_wrapper_demo"
-              class="mauticform_wrapper text-[#192734] darK:text-white"
+              class="mauticform_wrapper text-[#192734] dark:text-white"
             >
               <form
                 autocomplete="false"
