Commented out HeadHrefLangs component in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
-import { HeadHrefLangs } from "astro-i18next/components";
+// import { HeadHrefLangs } from "astro-i18next/components";
 import i18next from "i18next";
 import "@fontsource-variable/inter";
 import Cookie from "@components/cookie.astro";
@@ -34,7 +34,7 @@ const makeTitle = title
     <link rel="icon" type="image/svg+xml" href="/images/monolithon-fav.png" />
     <meta name="generator" content={Astro.generator} />
     <meta name="theme-color" content="#ffffff" />
-    <HeadHrefLangs />
+    <!-- <HeadHrefLangs /> -->
 
     <ViewTransitions />
     <!-- Global CSS -->
