--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,13 +67,13 @@ const makeTitle = title
       rel="alternate"
       type="application/rss+xml"
       title="Monolithon"
-      href={`${Astro.site}rss/blogs.en.xml`}
+      href={`${Astro.site}rss.en.xml`}
     />
     <link
       rel="alternate"
       type="application/rss+xml"
       title="Monolithon"
-      href={`${Astro.site}rss/blogs.hu.xml`}
+      href={`${Astro.site}rss.hu.xml`}
     />
 
     <SEO
