enabling RSS feed auto-discovery

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,6 +62,19 @@ const makeTitle = title
     <ViewTransitions />
     <!-- Global CSS -->
     <link rel="stylesheet" href="/index.css" />
+    <!-- rss -->
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Monolithon"
+      href={`${Astro.site}rss.xml`}
+    />
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Monolithon"
+      href={`${Astro.site}rss-hu.xml`}
+    />
 
     <SEO
       title={makeTitle}
