refactor: using cookie chimp

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,8 +92,9 @@ const makeTitle = title
         },
       }}
     />
+    <script src="https://cookiechimp.com/widget/N8ptMm.js"></script>
   </head>
-  <Cookie />
+  <!-- <Cookie /> -->
   <body class="dark:bg-stone-950">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
@@ -114,7 +115,6 @@ const makeTitle = title
         content-visibility: auto;
       }
     </style>
-
     <script>
       /** This section is only needed once per page if manually copying **/
       //@ts-expect-error
