refactor: moved chimps script up

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,7 @@ const makeTitle = title
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <script is:inline src="https://cookiechimp.com/widget/N8ptMm.js"></script>
     <link
       rel="icon"
       type="image/svg+xml"
@@ -92,7 +93,6 @@ const makeTitle = title
         },
       }}
     />
-    <script src="https://cookiechimp.com/widget/N8ptMm.js"></script>
   </head>
   <!-- <Cookie /> -->
   <body class="dark:bg-stone-950">
