--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Navbar from "@components/navbar/navbar.astro";
 // import { HeadHrefLangs } from "astro-i18next/components";
 import i18next from "i18next";
 import "@fontsource-variable/inter";
-import Cookie from "@components/cookie.astro";
+// import Cookie from "@components/cookie.astro";
 import { ViewTransitions } from "astro:transitions";
 
 export interface Props {
