--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -153,7 +153,8 @@ changeLanguage("en");
               </h2>
               <p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">
                 <a href="https://support.monolithon.com"
-                  >Visit support.monolithon.com now!</a>
+                  >Visit support.monolithon.com now!</a
+                >
               </p>
             </div>
           </div>
@@ -172,202 +173,203 @@ changeLanguage("en");
        +36 30 7192 418
     </div>
   </Container>
-</Layout>
-<div
-  id="mauticform_wrapper_contactform"
-  class="flex-grow mauticform_wrapper text-[#192734] dark:text-white dark:bg-stone-900"
->
-  <form
-    autocomplete="false"
-    role="form"
-    method="post"
-    action="https://asset.monolithon.com/form/submit?formId=1"
-    id="mauticform_contactform"
-    data-mautic-form="contactform"
-    enctype="multipart/form-data"
+
+  <div
+    id="mauticform_wrapper_contactform"
+    class="flex-grow mauticform_wrapper text-[#192734] dark:text-white dark:bg-stone-900"
   >
-    <div class="mauticform-error" id="mauticform_contactform_error"></div>
-    <div class="mauticform-message" id="mauticform_contactform_message"></div>
-    <div class="mauticform-innerform">
-      <div
-        class="mauticform-page-wrapper mauticform-page-1"
-        data-mautic-form-page="1"
-      >
+    <form
+      autocomplete="false"
+      role="form"
+      method="post"
+      action="https://asset.monolithon.com/form/submit?formId=1"
+      id="mauticform_contactform"
+      data-mautic-form="contactform"
+      enctype="multipart/form-data"
+    >
+      <div class="mauticform-error" id="mauticform_contactform_error"></div>
+      <div class="mauticform-message" id="mauticform_contactform_message"></div>
+      <div class="mauticform-innerform">
         <div
-          id="mauticform_contactform_first_name"
-          data-validate="first_name"
-          data-validation-type="text"
-          class="mauticform-row mauticform-text mauticform-field-1 mauticform-required"
+          class="mauticform-page-wrapper mauticform-page-1"
+          data-mautic-form-page="1"
         >
-          <label
-            id="mauticform_label_contactform_first_name"
-            for="mauticform_input_contactform_first_name"
-            class="mauticform-label"
+          <div
+            id="mauticform_contactform_first_name"
+            data-validate="first_name"
+            data-validation-type="text"
+            class="mauticform-row mauticform-text mauticform-field-1 mauticform-required"
           >
-            First Name
-          </label>
-          <input
-            id="mauticform_input_contactform_first_name"
-            name="mauticform[first_name]"
-            value=""
-            class="mauticform-input"
-            type="text"
-          />
-          <span class="mauticform-errormsg" style="display: none;"
-            >Mandotory</span
-          >
-        </div>
+            <label
+              id="mauticform_label_contactform_first_name"
+              for="mauticform_input_contactform_first_name"
+              class="mauticform-label"
+            >
+              First Name
+            </label>
+            <input
+              id="mauticform_input_contactform_first_name"
+              name="mauticform[first_name]"
+              value=""
+              class="mauticform-input"
+              type="text"
+            />
+            <span class="mauticform-errormsg" style="display: none;"
+              >Mandotory</span
+            >
+          </div>
 
-        <div
-          id="mauticform_contactform_last_name"
-          data-validate="last_name"
-          data-validation-type="text"
-          class="mauticform-row mauticform-text mauticform-field-2 mauticform-required"
-        >
-          <label
-            id="mauticform_label_contactform_last_name"
-            for="mauticform_input_contactform_last_name"
-            class="mauticform-label"
+          <div
+            id="mauticform_contactform_last_name"
+            data-validate="last_name"
+            data-validation-type="text"
+            class="mauticform-row mauticform-text mauticform-field-2 mauticform-required"
           >
-            Last Name
-          </label>
-          <input
-            id="mauticform_input_contactform_last_name"
-            name="mauticform[last_name]"
-            value=""
-            class="mauticform-input"
-            type="text"
-          />
-          <span class="mauticform-errormsg" style="display: none;"
-            >Mandotory</span
-          >
-        </div>
+            <label
+              id="mauticform_label_contactform_last_name"
+              for="mauticform_input_contactform_last_name"
+              class="mauticform-label"
+            >
+              Last Name
+            </label>
+            <input
+              id="mauticform_input_contactform_last_name"
+              name="mauticform[last_name]"
+              value=""
+              class="mauticform-input"
+              type="text"
+            />
+            <span class="mauticform-errormsg" style="display: none;"
+              >Mandotory</span
+            >
+          </div>
 
-        <div
-          id="mauticform_contactform_email_address"
-          data-validate="email_address"
-          data-validation-type="email"
-          class="mauticform-row mauticform-email mauticform-field-3 mauticform-required"
-        >
-          <label
-            id="mauticform_label_contactform_email_address"
-            for="mauticform_input_contactform_email_address"
-            class="mauticform-label"
+          <div
+            id="mauticform_contactform_email_address"
+            data-validate="email_address"
+            data-validation-type="email"
+            class="mauticform-row mauticform-email mauticform-field-3 mauticform-required"
           >
-            Email address
-          </label>
-          <input
-            id="mauticform_input_contactform_email_address "
-            name="mauticform[email_address]"
-            value=""
-            class="mauticform-input"
-            type="email"
-          />
-          <span class="mauticform-errormsg" style="display: none;"
-            >Mandotory</span
-          >
-        </div>
+            <label
+              id="mauticform_label_contactform_email_address"
+              for="mauticform_input_contactform_email_address"
+              class="mauticform-label"
+            >
+              Email address
+            </label>
+            <input
+              id="mauticform_input_contactform_email_address "
+              name="mauticform[email_address]"
+              value=""
+              class="mauticform-input"
+              type="email"
+            />
+            <span class="mauticform-errormsg" style="display: none;"
+              >Mandotory</span
+            >
+          </div>
 
-        <div
-          id="mauticform_contactform_mobile"
-          data-validate="mobile"
-          data-validation-type="text"
-          class="mauticform-row mauticform-text mauticform-field-4 mauticform-required"
-        >
-          <label
-            id="mauticform_label_contactform_mobile"
-            for="mauticform_input_contactform_mobile"
-            class="mauticform-label"
+          <div
+            id="mauticform_contactform_mobile"
+            data-validate="mobile"
+            data-validation-type="text"
+            class="mauticform-row mauticform-text mauticform-field-4 mauticform-required"
           >
-            Mobile
-          </label>
-          <input
-            id="mauticform_input_contactform_mobile"
-            name="mauticform[mobile]"
-            value=""
-            class="mauticform-input"
-            type="text"
-          />
-          <span class="mauticform-errormsg" style="display: none;"
-            >Mandotory</span
-          >
-        </div>
+            <label
+              id="mauticform_label_contactform_mobile"
+              for="mauticform_input_contactform_mobile"
+              class="mauticform-label"
+            >
+              Mobile
+            </label>
+            <input
+              id="mauticform_input_contactform_mobile"
+              name="mauticform[mobile]"
+              value=""
+              class="mauticform-input"
+              type="text"
+            />
+            <span class="mauticform-errormsg" style="display: none;"
+              >Mandotory</span
+            >
+          </div>
 
-        <div
-          id="mauticform_contactform_f_message"
-          class="mauticform-row mauticform-text mauticform-field-5"
-        >
-          <label
-            id="mauticform_label_contactform_f_message"
-            for="mauticform_input_contactform_f_message"
-            class="mauticform-label"
+          <div
+            id="mauticform_contactform_f_message"
+            class="mauticform-row mauticform-text mauticform-field-5"
           >
-            Message
-          </label>
-          <textarea
-            id="mauticform_input_contactform_f_message"
-            name="mauticform[f_message]"
-            class="mauticform-textarea"
-          >
-          </textarea>
-          <span class="mauticform-errormsg" style="display: none;"></span>
-        </div>
+            <label
+              id="mauticform_label_contactform_f_message"
+              for="mauticform_input_contactform_f_message"
+              class="mauticform-label"
+            >
+              Message
+            </label>
+            <textarea
+              id="mauticform_input_contactform_f_message"
+              name="mauticform[f_message]"
+              class="mauticform-textarea"
+            >
+            </textarea>
+            <span class="mauticform-errormsg" style="display: none;"></span>
+          </div>
 
-        <div
-          id="mauticform_contactform_submit"
-          class="mauticform-row mauticform-button-wrapper mauticform-field-6"
-        >
-          <button
-            type="submit"
-            name="mauticform[submit]"
-            id="mauticform_input_contactform_submit"
-            value=""
-            class="mauticform-button btn btn-default"
+          <div
+            id="mauticform_contactform_submit"
+            class="mauticform-row mauticform-button-wrapper mauticform-field-6"
           >
-            Submit
-          </button>
+            <button
+              type="submit"
+              name="mauticform[submit]"
+              id="mauticform_input_contactform_submit"
+              value=""
+              class="mauticform-button btn btn-default"
+            >
+              Submit
+            </button>
+          </div>
         </div>
       </div>
-    </div>
 
-    <input
-      type="hidden"
-      name="mauticform[formId]"
-      id="mauticform_contactform_id"
-      value="1"
-    />
-    <input
-      type="hidden"
-      name="mauticform[return]"
-      id="mauticform_contactform_return"
-      value=""
-    />
-    <input
-      type="hidden"
-      name="mauticform[formName]"
-      id="mauticform_contactform_name"
-      value="contactform"
-    />
-  </form>
-</div>
+      <input
+        type="hidden"
+        name="mauticform[formId]"
+        id="mauticform_contactform_id"
+        value="1"
+      />
+      <input
+        type="hidden"
+        name="mauticform[return]"
+        id="mauticform_contactform_return"
+        value=""
+      />
+      <input
+        type="hidden"
+        name="mauticform[formName]"
+        id="mauticform_contactform_name"
+        value="contactform"
+      />
+    </form>
+  </div>
 
-<script>
-  if (typeof MauticSDKLoaded == "undefined") {
-    var MauticSDKLoaded = true;
-    var head = document.getElementsByTagName("head")[0];
-    var script = document.createElement("script");
-    script.type = "text/javascript";
-    script.src =
-      "https://asset.monolithon.com/media/js/mautic-form.js?vea43f1e4";
-    script.onload = function () {
+  <script is:inline>
+    if (typeof MauticSDKLoaded == "undefined") {
+      var MauticSDKLoaded = true;
+      var head = document.getElementsByTagName("head")[0];
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src =
+        "https://asset.monolithon.com/media/js/mautic-form.js?vea43f1e4";
+      script.onload = function () {
+        MauticSDK.onLoad();
+      };
+      head.appendChild(script);
+      var MauticDomain = "https://asset.monolithon.com";
+      var MauticLang = {
+        submittingMessage: "Kérjük várjon...",
+      };
+    } else if (typeof MauticSDK != "undefined") {
       MauticSDK.onLoad();
-    };
-    head.appendChild(script);
-    var MauticDomain = "https://asset.monolithon.com";
-    var MauticLang = {
-      submittingMessage: "Kérjük várjon...",
-    };
-  } else if (typeof MauticSDK != "undefined") {
-    MauticSDK.onLoad();
-  }
-</script>
+    }
+  </script>
+</Layout>
