refactor: dark theme text contact

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -164,13 +164,13 @@ changeLanguage("en");
             Presales question?
           </h2>
           <p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">
-            Tibor Gede - Administrator
+            <span>Tibor Gede - Administrator</span>
+            <span class="block">Budapest</span>
+            <span class="block">Hungary</span>
+            <span class="block">+36 30 7192 418</span>
           </p>
-           Budapest
         </div>
-         Hungary
       </div>
-       +36 30 7192 418
     </div>
   </Container>
 
