refactor: inline script in hu/kapcsolat.astro

--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -354,7 +354,7 @@ changeLanguage("hu");
   </Container>
 </Layout>
 
-<script>
+<script is:inline>
   if (typeof MauticSDKLoaded == "undefined") {
     var MauticSDKLoaded = true;
     var head = document.getElementsByTagName("head")[0];
