--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -185,6 +185,23 @@ const makeTitle = title
         },
       });
     </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=P4LTKG3"
+      is:inline></script>
+    <script is:inline>
+      window.addEventListener("cc:onConsent", function (event) {
+        if (CookieConsent.acceptedService("Google Analytics", "analytics")) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag() {
+            dataLayer.push(arguments);
+          }
+          gtag("js", new Date());
+
+          gtag("config", "TAG_ID");
+        }
+      });
+    </script>
     <Footer />
   </body>
 </html>
