--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -189,6 +189,16 @@ const makeTitle = title
     ></script>
     <script is:inline>
       window.addEventListener("cc:onConsent", function (event) {
+        if (CookieConsent.acceptedService("analytics")) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag() {
+            dataLayer.push(arguments);
+          }
+          gtag("js", new Date());
+
+          gtag("config", "P4LTKG3");
+        }
+
         if (CookieConsent.acceptedService("Google Analytics", "analytics")) {
           console.log("got mailchimp cookie consent");
           window.dataLayer = window.dataLayer || [];
